# uwpdumper-rs

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
crates/uwpdumper-cli/: Cargo.toml
crates/uwpdumper-cli/src/: inject.rs  main.rs  package.rs  process.rs
crates/uwpdumper-payload/: Cargo.toml
crates/uwpdumper-payload/src/: dumper.rs  lib.rs  uwp.rs
crates/uwpdumper-shared/: Cargo.toml
crates/uwpdumper-shared/src/: ipc.rs  lib.rs  messages.rs
