[package]
name = "uwpdumper-shared"
description = "Shared types and IPC protocol for UWPDumper"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
windows = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
